# pytorch-project-template

./: .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  testing.ipynb
.github/workflows/: config.yml
omni_model/: __init__.py
omni_model/src/: __init__.py  cli_helpers.py  omni_model.py  omniscient_cli.py  runner.py
omni_model/src/data/: dataset_helpers.py  datasets.py
omni_model/src/datasets/: data.py
omni_model/src/metrics/: meters.py  metrics.py
omni_model/src/model/: omni_model.py
omni_model/src/trainer/: base_trainer.py  omni_trainer.py
omni_model/src/utils/: logger.py  options.py  overwrite_print.py
omni_model/tests/: test_omni_model.py  test_runner.py
omni_model/tests/test_data/: test_datasets.py
omni_model/tests/test_trainer/: test_trainer.py
omni_model/tests/test_utils/: test_logger.py  test_options.py
