[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <No Email Provided>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.7.1"
click = "^7.1.2"
torchvision = "^0.8.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.0.1"
mypy = "^0.782"
isort = "^5.3.2"
pre-commit = "^2.8.2"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
