[tool.poetry]
name = "Omni Model"
version = "0.1.0"
description = ""
authors = ["Gabriella Melki <gabriellamelki@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.7.1"
click = "^7.1.2"
torchvision = "^0.8.2"
mypy = "^0.790"
pytest-mypy = "^0.8.0"
tqdm = "^4.55.2"
Pillow = "^8.1.0"
pyflakes = "^2.2.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.0.1"
pre-commit = "^2.8.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
