[tool.poetry]
name = "Omni Model"
version = "0.1.0"
description = ""
authors = ["Gabriella Melki <gabriellamelki@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.2.1"
torchvision = "^0.17.1"
ipykernel = "^6.29.3"
click = "^8.1.7"
tqdm = "^4.66.2"
pillow = "^10.2.0"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
